# AISCHack2026

./: .env.example  .gitignore  CLAUDE.md  README.md  Remis_PRD.md  TerraLend_PRD.md  package-lock.json  pyproject.toml  requirements.txt  run.py  start.sh
.vercel/: project.json
app/: config.py  main.py
app/db/: crud.py  dynamodb.py
app/llm/: bedrock.py  fallbacks.py  prompts.py
app/models/: schemas.py
app/scheduler/: monitor_job.py
app/services/: commands.py  decision_engine.py  mock_wise.py  onboarding.py  preference_handler.py  rate_monitor.py  recommendation.py  stablecoin.py  telegram.py  transfer_handler.py  wise_adapter.py
backend/: API_CONTRACTS.md  config.py  main.py  narrative.py  prompts.py  requirements.txt  seed.py
backend/models/: database.py  models.py  schemas.py
backend/routes/: financial.py  narrative.py  regions.py  (+1 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
remit_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: demo_replay.py  seed_data.py  setup_dynamodb.py
tasks/: dev1-backend-core.md  dev2-frontend-ui.md  dev3-ai-simulation.md  dev4-integration.md  todo.md
tests/: conftest.py  test_core.py  test_task1_1_scaffold.py  test_task1_2_database.py  test_task1_3_seed.py  test_task2_1_mock_data.py  test_task2_2_noaa_client.py  test_task2_3_climate_orchestrator.py  test_task3_1_climate_engine.py  test_task4_1_financial_translator.py  test_task5_1_region_endpoints.py  test_task5_2_financial_endpoints.py  test_task5_3_simulation_endpoint.py  test_task5_4_integration.py
(+50 files in other folders)
